# pgn2binpack

./: .gitignore  Cargo.toml  README.md  download.py  plot.py
src/: cli.rs  io.rs  main.rs  process.rs
src/analytics/: mod.rs  rescore.rs  unique.rs  view.rs
src/analytics/view/: dump.rs  mod.rs  tui.rs
src/binpack/: builder.rs  mod.rs
src/errors/: mod.rs
src/util/: mod.rs  util.rs
src/wdl/: mod.rs  wdl.rs
