[package]
name = "pgn-binpack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = "1.1.2"
human_bytes = "0.4.3"
pgn-reader = "0.28.0"
rayon = "1.11.0"
# sfbinpack = "0.5.0"
sfbinpack = { git = "https://github.com/Disservin/binpack-rust.git", rev = "7ddb18229602f4bd7510bd998a230bc742bcf387" }
shakmaty = "0.29.3"
walkdir = "2.5.0"
tempfile = "3"


[profile.release]
debug = "line-tables-only"
