[package]
name = "pgn2binpack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = "1.1.2"
human_bytes = "0.4.3"
pgn-reader = "0.28.0"
rayon = "1.11.0"
# sfbinpack = "0.6.1"
# use git source for now
sfbinpack = { git = "https://github.com/Disservin/binpack-rust.git", rev = "39e2dd7336690fc31f87f8db74f5fa66646b9e19" }
shakmaty = "0.29.3"
walkdir = "2.5.0"
tempfile = "3"


[profile.release]
debug = "line-tables-only"
